# hellolib

./: Makefile.am  configure.ac  hello.h  libhello.c
