dnl
dnl configure.ac - autoconf script for hellolib
dnl
dnl Copyright (c) 2018 Verizon Communications, Inc.
dnl

AC_INIT([hellolib], [1.0.0])
AM_INIT_AUTOMAKE([subdir-objects foreign])
AM_SILENT_RULES([yes])
AC_COPYRIGHT([
Copyright (c) 2018 Verizon Communications, Inc.
])
AC_CONFIG_MACRO_DIR([m4])

AC_PREREQ([2.69])
LT_PREREQ([2.4])
LT_INIT([])

AC_CANONICAL_HOST
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
